<resources>
    <string name="app_name">Quản lý nhà hàng </string>
    <string name="input_username">Nhập tên người </string>
    <string name="input_password">Nhập mật khẩu</string>
    <string name="log_in">Đăng nhập</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nguyễn Văn A</string>
    <string name="nav_header_subtitle">Nhân viên</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_trangchu">Trang chủ</string>
    <string name="menu_thongtincanhan">Thông tin cá nhân</string>
    <string name="menu_doimatkhau">Đổi mật khẩu</string>
    <string name="menu_dangxuat">Đăng xuất</string>

    <string-array name="gioitinh">
        <item>Nam</item>
        <item>Nữ</item>
    </string-array>
</resources>