<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trangchu"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_trangchu" />
        <item
            android:id="@+id/nav_thongtincanhan"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/menu_thongtincanhan" />
        <item
            android:id="@+id/nav_doimatkhau"
            android:icon="@drawable/ic_baseline_vpn_key_24"
            android:title="@string/menu_doimatkhau" />

        <item
            android:id="@+id/nav_dang_xuat"
            android:icon="@drawable/ic_baseline_arrow_back_24"
            android:title="@string/menu_dangxuat" />
    </group>
</menu>