<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_trangchu">

    <fragment
        android:id="@+id/nav_trangchu"
        android:name="com.example.quanlynhahang.ui.trangchu.TrangChuFragment"
        android:label="@string/menu_trangchu"
        tools:layout="@layout/fragment_trangchu" />

    <fragment
        android:id="@+id/nav_thongtincanhan"
        android:name="com.example.quanlynhahang.ui.thongtincanhan.ThongTinCaNhanFragment"
        android:label="@string/menu_thongtincanhan"
        tools:layout="@layout/fragment_thongtincanhan" />

    <fragment
        android:id="@+id/nav_doimatkhau"
        android:name="com.example.quanlynhahang.ui.doimatkhau.DoiMatKhauFragment"
        android:label="@string/menu_doimatkhau"
        tools:layout="@layout/fragment_doimatkhau" />
</navigation>